@@ -1,7 +1,17 @@
+2005-01-22  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-autogen.sh: Fix the (AC|IT)_PROG_INTLTOOL support for
+	both places where we grep for it
+	(version_check): If we are checking for automake = 1.4, then make
+	sure we error out with that error when we find it, and not >= 1.4
+	since we don't actually check for >= 1.4
+
+	Fixes #129903
+
 2004-11-24  Mariano Suárez-Alvarez <mariano@gnome.org>
 
-	* gnome-autogen.sh: grep wants basic regexps, not extended ones: fix the
-	regular expression for INTLTOOL.
+	* gnome-autogen.sh: grep wants basic regexps, not extended ones:
+	fix the	regular expression for INTLTOOL.
 
 2004-11-24  Rodney Dawes  <dobey@novell.com>
 
